# nixos-config

./: .gitattributes  flake.nix
modules/: autorestic.nix  nixbuildnet.nix  vmware-guest.nix
modules/email/: cyrus-sasl-xoauth2.nix  default.nix  email.nix  google-auth-oauthlib.nix  oauth2token.nix
modules/email/oauth2token/: config.json  scopes.json
modules/email/scripts/: notmuch-move.sh  notmuch-notify.sh  notmuch-tag.sh
modules/selfhosted/: adguard.nix  appdaemon.nix  bazarr.nix  calibre-web.nix  calibre.nix  changedetection.nix  default.nix  fava.nix  frigate.nix  glances.nix  grocy.nix  homeassistant.nix  homepage.nix  influxdb.nix  miniflux.nix  mosquitto.nix  paperless.nix  plex.nix  postgres.nix  prowlarr.nix  radarr.nix  redis.nix  roomassistant.nix  sabnzbd.nix  scrypted.nix  silverbullet.nix  sonarr.nix  tailscale.nix  traefik.nix  unifi.nix  utils.nix  zigbee2mqtt.nix
systems/: common.nix  darwin.nix  nixos.nix
systems/afanc/: configuration.nix  hardware-configuration.nix
systems/crwban/: autorestic.yml  backup.nix  backup_excludes  configuration.nix  hardware-configuration.nix  selfhosted.nix
systems/crwban/backup-cron/: autorestic.patch  autorestic.yml  default.nix
systems/llwynog/: configuration.nix
systems/ystlum/: configuration.nix
users/tom/: email.nix  guest-vm.nix  nixos-user.nix  remote.nix  user.nix  workstation.nix
users/tom/apps/: common.nix  desktop.nix  emacs.nix  email.nix  linux-desktop.nix  neovim.nix  wayland-desktop.nix  zsh.nix
users/tom/scripts/: flake.nix  pyproject.toml  upcoming-event.py
utils/: mkSystem.nix
(+29 files in other folders)
