[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Tom Usher <tom@usher.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
